[package]
name = "mist"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.3"
serde = "1.0"
serde_derive = "1.0"
steamworks-sys = { path = "../steamworks-sys", optional = true } # Only include steamworks for the binary

[features]
steamworks = ["steamworks-sys"]

[lib]
name = "mist"
path = "src/lib.rs"
crate-type = ["cdylib"] # Generate a c-abi compatible lib

[[bin]]
name = "mist"
path = "src/main.rs"
required-features = ["steamworks"]
