[package]
name = "mist"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
crossbeam-channel = "0.5"
lazy_static = "1"
parking_lot = "0.12"
paste = "1.0"
raw_sync = "0.1"
serde = "1.0"
serde_derive = "1.0"
shared_memory = "0.12"
steamworks-sys = { path = "../steamworks-sys", optional = true } # Only include steamworks for the binary

[features]
codegen = ["steamworks"]
steamworks = ["steamworks-sys"]
mist-bin = ["steamworks", "steamworks-sys/link"]

[lib]
name = "mist"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] # Generate a c-abi compatible lib

[[bin]]
name = "mist"
path = "src/main.rs"
required-features = ["mist-bin"]
