[package]
name = "dialog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
egui = "0.16"
egui_glow = "0.16"
sdl2 = { version = "0.35" }
glow = "0.11"
glutin = { version="0.28", default-features = false, features = ["x11"] } # Wayland does not behave nicely with Steam
steamworks-sys = { path = "../../steamworks-sys" }
